version/0.3/_sources/api/ansys/geometry/core/math/matrix/Matrix.rst.txt




Matrix
======

.. py:class:: Matrix(shape, dtype=float, buffer=None, offset=0, strides=None, order=None)
   :canonical: ansys.geometry.core.math.matrix.Matrix



Bases: :py:obj:`numpy.ndarray`

Provides matrix primitive representation.

















Overview
--------
.. py:currentmodule:: Matrix
.. tab-set::



    .. tab-item:: Methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~determinant`
            - Get the determinant of the matrix.
          * - :py:attr:`~inverse`
            - Provide the inverse of the matrix.





    .. tab-item:: Special methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__mul__`
            - Get the multiplication of the matrix.
          * - :py:attr:`~__eq__`
            - Equals operator for the ``Matrix`` class.
          * - :py:attr:`~__ne__`
            - Not equals operator for the ``Matrix`` class.



Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.math.matrix import Matrix




Method detail
-------------


.. py:method:: determinant() -> ansys.geometry.core.typing.Real

   
   Get the determinant of the matrix.
















   ..
       !! processed by numpydoc !!



.. py:method:: inverse() -> Matrix

   
   Provide the inverse of the matrix.
















   ..
       !! processed by numpydoc !!



.. py:method:: __mul__(other: beartype.typing.Union[Matrix, numpy.ndarray]) -> Matrix

   
   Get the multiplication of the matrix.
















   ..
       !! processed by numpydoc !!



.. py:method:: __eq__(other: Matrix) -> bool

   
   Equals operator for the ``Matrix`` class.
















   ..
       !! processed by numpydoc !!



.. py:method:: __ne__(other: Matrix) -> bool

   
   Not equals operator for the ``Matrix`` class.
















   ..
       !! processed by numpydoc !!


